<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/parent_margin"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/bats"
        android:contentDescription="@string/img_description"/>

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team_A_View"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/team_a"
                    android:textSize="@dimen/team_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/initial_zero"
                    android:textColor="#000000"
                    android:textSize="@dimen/score_number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/innings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/minus"
                        android:layout_width="40dp"
                        android:layout_height="56dp"
                        android:onClick="minus"
                        android:text="-"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Inning"
                            android:textColor="#000000"
                            android:textSize="@dimen/inning_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/inning_total_view"
                            android:layout_width="46dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:text="@string/initial_one"
                            android:textColor="#000000"
                            android:textSize="@dimen/inning_number" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/plus"
                        android:layout_width="40dp"
                        android:layout_height="56dp"
                        android:onClick="plus"
                        android:text="+"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/outs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:onClick="minusOuts"
                        android:text="-" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:text="Outs"
                            android:textColor="#000000"
                            android:textSize="@dimen/outs_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/outs_total"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:text="@string/initial_zero"
                            android:textColor="#000000"
                            android:textSize="@dimen/outs_number"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Button
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:onClick="plusOuts"
                        android:text="+" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team_B_View"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/team_b"
                    android:textColor="#000000"
                    android:textSize="@dimen/team_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/initial_zero"
                    android:textColor="#000000"
                    android:textSize="@dimen/score_number" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="reset"
        android:text="@string/reset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="#000000"
                android:textSize="@dimen/panel_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/away"
                android:textColor="#000000"
                android:textSize="@dimen/panel_text"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/panel_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addOneTeamA"
                    android:text="+1 Run" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoTeamA"
                    android:text="+2 Runs" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeTeamA"
                    android:text="+3 Runs" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addFourTeamA"
                    android:text="+4 Runs" />

            </LinearLayout>

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addOneTeamB"
                    android:text="+1 Run" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoTeamB"
                    android:text="+2 Runs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeTeamB"
                    android:text="+3 Runs" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addFourTeamB"
                    android:text="+4 Runs" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>